# circle-mover

./: Cargo.toml  README.md
cm-client/godot/: Root.gd  project.godot  root.tscn  rust.gdextension
cm-client/rust-bindings/: Cargo.toml
cm-client/rust-bindings/src/: lib.rs
cm-protos/: Cargo.toml  build.rs
cm-protos/src/: lib.rs  messages.proto
cm-server/: Cargo.toml
cm-server/src/: actors.rs  main.rs
cm-server/src/actors/: connection.rs  lobby.rs  server.rs
cm-shared-data/: Cargo.toml
cm-shared-data/src/: lib.rs
cm-sim/: Cargo.toml  README.md
cm-sim/src/: actor.rs  game.rs  lib.rs  tick_sequenced_stream.rs
godot/: Brain.gd  Brain.tscn  Circle.gd  FPS_label.gd  Root.gd  circle.tscn  connecting_screen.gd  connecting_screen.tscn  icon.svg.import  lobby.gd  lobby.tscn  menu.gd  menu.tscn  project.godot  root.tscn  rust.gdextension
godot-rust-client/: Cargo.toml
godot-rust-client/src/: classes.rs  lib.rs  network_client.rs
godot-rust-client/src/actors/: network.rs
godot-rust-client/src/classes/: game_state.rs  lobby_state.rs
godot-rust-client/src/util/: network.rs
