[package]
name = "cm-protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
prost = "0.12.3" 
prost-types = "0.12.3" 
cm-sim = { path = "../cm-sim" }
quinn = "0.10.2"
tracing = "0.1"
anyhow = "1.0.79"

[build-dependencies]
prost-build = { version = "0.12.3" }