[package]
name = "cm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.10.2"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
rcgen = "0.12.0"
cm-sim = { path = "../cm-sim" }
cm-protos = { path = "../cm-protos" }