[package]
name = "cm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cm-shared-data = { path = "../cm-shared-data" }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
quinn = "0.10.2"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
rcgen = "0.12.0"
cm-sim = { path = "../cm-sim" }
anyhow = "1.0.79"
ractor = "0.9"
