[package]
name = "cm-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
tokio-stream = "0.1"
nalgebra = "0.32.3"
anyhow = "1.0.79"
ractor = "0.9"
