[package]
name = "godot-rust-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
cm-sim = { path = "../cm-sim" }
cm-protos = { path = "../cm-protos" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
quinn = "0.10.2"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
anyhow = "1.0.79"
ractor = "0.9"
